# course_work-4

./: README.md  pyproject.toml
classes/: HHClass.py  SJCalss.py  SaverClass.py  abstract_classes.py  vacancies_class.py
data/: vacancies.json
src/: funcs.py  main.py
