[tool.poetry]
name = "proj"
version = "0.1.0"
description = ""
authors = ["Anastasiya <puchinina.anastasia58@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
datetime = "^5.4"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
